GNOME Bugzilla – Bug 667378
hotplug-sniffer: fix double free when setting D-Bus return value
Last modified: 2012-01-16 23:35:08 UTC
See https://bugzilla.redhat.com/show_bug.cgi?id=743631
Created attachment 204705 [details] [review] hotplug-sniffer: fix double free when setting D-Bus return value g_dbus_method_invocation_return_value() adopts a floating reference, so we don't also need to unreference it; fix by replacing the code using a more compact form using the ^ convenience character in GVariant type specifications. (Thanks to Ryan Lortie for the suggestion.)
Review of attachment 204705 [details] [review]: Looks fine, but you should also add a link to the Red Hat bug which has the real-world triggering crash data.
Fix pushed (sorry, forget to update the commit message, but the link to the RH bug is here)